# sxa

./: .gitignore  .sops.yaml  HUMAN_TODO.md  README.md  TODO.md  sxa-arkitektur.md
docs/: ideas-bilkop.md  ideas-jones.md  ideas-prylar.md  ideas.md  tools-loopia.md
docs/ideas/: TEMPLATE.md  bilkop.md  index.md  kortspel.md  me2me.md  workwear.md  yourtake.md
games/game0/: index.html  package-lock.json  package.json
games/game0/src/: main.js
games/game0/src/scenes/: GameScene.js
games/gamelab/: package-lock.json  package.json  svelte.config.js
games/gamelab/docs/: gravity-sim-design.md
games/gamelab/src/: app.css  app.html
games/starsandcomets/: IDEAS.md  INTERAKTION.md  README.md  index.html  main.js  package-lock.json  package.json  style.css
games/starsandcomets/src/: App.svelte  BackgroundCanvas.svelte  api.js  bodies.js  lab.js  main.js  renderer.js  simulator.js
infra/: Caddyfile  docker-compose.yml
infra/www/: index.html
infra/www/game0/: index.html
secrets/: data.sops.env  db.sops.env  hetzner.sops.env  loopia.sops.env
services/data/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  requirements.txt
services/data/levels/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
services/data/scripts/: dev.sh  smoketest.py  smoketest_security.py
services/data/sxa_data/: settings.py  urls.py  wsgi.py
skills/: infra.md
tools/: deploy-data  deploy-game0  deploy-starsandcomets  dump-data  seed-local  sxa-data
tools/loopia/: pyproject.toml
tools/loopia/loopia/: api.py  cli.py
(+39 files in other folders)
